--- a/style.css
+++ b/style.css
@@ -1,16 +1,6 @@
-.one{
-    background-color: aqua;
-    height: 275px;
+.head{
+    background-color: #1f2937;
 }
-.two{
-    background-color: blue;
-    height: 275px;
+.foot{
+    background-color: #1f2937;
 }
-.three{
-    background-color: yellow;
-    height: 275px;
-}  
-.four{
-    background-color: violet;
-    height: 100px;
-} 
