--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@
         height: 300px;
         background-color: #1f2937;
 }
+.head{
+    display: flex;
+}
+img{
+    justify-content: center;
+    margin-left: 10px;
+}
  body > .main{
     background-color: pink;
     height: 100px;
