--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@
 }
 .head{
     display: flex;
+    flex-direction: column;
 }
-.head > .p1{
+.p1{
     color: aliceblue;
     font-size: x-large;
-    align-items: flex-end;
+    align-self:baseline;
+    margin-left: 15px;
 }
 img{
     justify-content: center;
