--- a/style.css
+++ b/style.css
@@ -22,16 +22,17 @@
 img{
     justify-content: center;
     margin-left: 10px;
+
 }
  body > .main{
     background-color: pink;
-    height: 100px;
+    height: 50px;
     flex-grow: 1;
  }
 
  body > .foot{
     background-color: #1f2937;
-    height: 100px;
+    height: 50px;
 }
 
   .paper{
@@ -41,45 +42,54 @@ img{
 }
  
 .img{
-    border: 15px solid #1f2937;;
+    border: 15px solid #1f2937;
+    margin-left: 0px;
 }
 .two {
     background-color: whitesmoke;
-    height: 300px;
+    height: 400px;
     display: flex;
-}
-.two .b1{
-    background-color: wheat;
-    border-radius: 2rem;
-    border: 2px solid blue;
-    height: 150px;
-    width: 150px;
+    justify-content: space-evenly;
 }
 .b1{
     align-self: center;
     margin-left: 50px;
 }
-.two .b2{
-    background-color: wheat;
-    border-radius: 2rem;
-    border: 2px solid blue;
-    height: 150px;
-    width: 150px;
-}
+
 .b2{
     align-self: center;
-    margin-left: 150px;
 }
-.two .b3{
-    background-color: wheat;
-    border-radius: 2rem;
-    border: 2px solid blue;
-    height: 150px;
-    width: 150px;
-}
+
 .b3{
     align-self: center;
-    margin-left: 200px;
 }
 
-
+.b4{
+    align-self: center;
+}
+img {
+    border-radius: 2rem;
+    border: 2px solid blue;
+}
+.nav1{
+    background-color: #1f2937;
+    display: flex;
+    list-style: none;
+    justify-content:flex-end;
+    
+}
+.nav1 li{
+    margin-right: 2rem;
+    font-size: 20px;
+}
+li a {
+    color: aliceblue;
+}
+.foot{
+    text-align: center;
+    font-size: medium;
+    color:antiquewhite;
+}
+.foot > p{
+    margin-top: 5px;
+}
